tests/snapshots/fix__places_a_label_beside_the_middle_when_a_parallel_connector_is_across_its_own-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -100 640 440">
        <g data-node="a1"><rect x="20" y="76" width="100" height="48"/><text x="70" y="105" text-anchor="middle" font-size="14">A1</text></g>
        <g data-node="a2"><rect x="500" y="76" width="100" height="48"/><text x="550" y="105" text-anchor="middle" font-size="14">A2</text></g>
        <g data-node="b1"><rect x="150" y="-60" width="100" height="48"/><text x="200" y="-31" text-anchor="middle" font-size="14">B1</text></g>
        <g data-node="b2"><rect x="400" y="-60" width="100" height="48"/><text x="450" y="-31" text-anchor="middle" font-size="14">B2</text></g>
        <line id="flow" data-from="a1" data-to="a2" x1="120" y1="100" x2="500" y2="100"/>
        <path id="other" data-from="b1" data-to="b2" d="M 200 -12 L 200 90 L 450 90 L 450 -12"/>
        <text data-label="retry" data-label-for="flow" x="310" y="123" text-anchor="middle" font-size="14">Retry</text>
      </svg>
