tests/snapshots/fix__places_a_label_beside_the_middle_when_a_parallel_connector_is_across_its_own.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 10.0,
  "remainingIssues": 0
}
