tests/snapshots/fix__places_a_label_on_the_side_further_from_other_connectors.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.4,
  "remainingIssues": 0
}
