tests/snapshots/fix__places_labels_of_connectors_inside_a_container-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -1 480 261">
        <g data-node="cluster">
          <rect x="20" y="19" width="420" height="201"/>
          <text x="40" y="45" font-size="14">Cluster</text>
          <g data-node="a">
            <rect x="50" y="80" width="100" height="56"/>
            <text x="100" y="113" text-anchor="middle" font-size="14">A</text>
          </g>
          <g data-node="b">
            <rect x="300" y="140" width="100" height="56"/>
            <text x="350" y="173" text-anchor="middle" font-size="14">B</text>
          </g>
        </g>
        <path id="ab" data-from="a" data-to="b" fill="none" d="M 150 108 L 350 108 L 350 140"/>
        <text data-label="calls" data-label-for="ab" x="250" y="97" text-anchor="middle" font-size="12">gRPC</text>
      </svg>
