tests/snapshots/fix__places_labels_of_connectors_inside_a_container.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": -0.0,
  "remainingIssues": 0
}
