tests/snapshots/fix__pushes_overlapping_nodes_apart_while_preserving_their_order-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="first">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">First</text>
        </g>
        <g data-node="second" transform="translate(50 0)">
          <rect x="90" y="20" width="100" height="56"/>
          <text x="140" y="53" text-anchor="middle" font-size="14">Second</text>
        </g>
      </svg>
