tests/snapshots/fix__reroutes_between_offset_ports_orthogonally_instead_of_diagonally-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="60" width="100" height="56"/>
          <text x="310" y="93" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="flow" data-from="source" data-to="target" fill="none" d="M 120 48 L 310 48 L 310 60"/>
      </svg>
