tests/snapshots/fix__reroutes_connectors_that_turn_just_beside_each_other.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.01,
  "remainingIssues": 0
}
